--- Version 0.1.4 ---
- mve support :-)
- Lots of portability fixes
- OS X support!
- Other bigendian linux/unix support?

--- Version 0.1.3 ---
- deb and rpm support added
- Added hotkeys to toggle fullscreen mode (same as d1x)
- joystick (via SDL) works
- fixed bug preventing some high-res modes in SDL
- disabled cockpit in ogl modes (causes crashes)
- automap resolution selectable with -automap<X>x<Y> or -automap_gameres

--- Version 0.1.2 ---
- SDL uses mouse wheel to emulate 3rd axis.
- Player files created with descent 2 should now work with d2x.
- Savegame thumbnails work in OpenGL
- Menus now work in OpenGL!
- Automap works in OpenGL!
- Fonts work in OpenGL!
- You can now use the -tmap option to select between the different
  texture mapping routines (c, fp, i386, pent, ppro) at runtime.
- Please bear with me while the source undergoes some rather ugly
  reorganization to fit more closely to the layout of d1x. This makes
  synchronization with d1x far, far easier.
- Fixed assembly bug causing crash on game start.  Thanks to Craig
  Hadady <chadady@iglou.com>
- Applied chdir patch from Falk Hueffner
  <falk.hueffner@student.uni-tuebingen.de>, and added code to load
  hogfiles from a central location, so it now doesn't matter what dir
  you start d2x from.
- Enabled option for RELEASE build
- ggi builds again (still broken, though)

--- Version 0.1.1 ---
Assembly under mingw32 now works.
Invulnerable robots bug fixed!
Build process much faster.
network support now compiles on mingw, dunno if it works...

--- Version 0.1.0 ---
Builds with SDL/OpenGL, even on Windows (MingW32)
Lots of minor changes and cleanups of the build system.

--- Version 0.0.9 ---
Improved automake setup, 'make dist' and VPATH builds now work.
svgalib, ggi support (alpha)
Merged in joystick support from Michael.Wagener@materna.de
Added -grabmouse option to keep the mouse from wandering away in
windowed SDL.  Pressing pause ungrabs it.

--- Version 0.0.8 ---