@@ -3,6 +3,7 @@
 - Lots of portability fixes
 - OS X support!
 - Other bigendian linux/unix support?
+- Shareware data files support!
 
 --- Version 0.1.3 ---
 - deb and rpm support added
